fix: adjust swap icon size for better alignment in order card component

--- a/miniprogram/pages/home/components/order-card/order-card.scss
+++ b/miniprogram/pages/home/components/order-card/order-card.scss
@@ -28,8 +28,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 42rpx;
-  height: 42rpx;
+  width: 50rpx;
+  height: 50rpx;
   font-size: $font-size-xs;
   font-weight: $font-weight-semibold;
 }
